Update page description meta tag

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="2G Servicios Generales"
+      content="Somos 2G SERVICIOS GENERALES S.R.L, una empresa dedicada a la ejecución de proyectos de construcción e ingeniería con más de diez años de experiencia en: sistemas de rebombeo, levantamientos topográficos, saneamiento físico legal de predios, movimiento de tierras, sistemas de drenaje, trabajo en interiores y exteriores de edificaciones, cerco perimétrico y alquiler de maquinaria liviana para minería."
     />
     <title>2G | Servicios Generales</title>
   </head>
