Update meta description

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="description"
-      content="Somos 2G SERVICIOS GENERALES S.R.L, una empresa dedicada a la ejecución de proyectos de construcción e ingeniería con más de diez años de experiencia en: sistemas de rebombeo, levantamientos topográficos, saneamiento físico legal de predios, movimiento de tierras, sistemas de drenaje, trabajo en interiores y exteriores de edificaciones, cerco perimétrico y alquiler de maquinaria liviana para minería."
+      content="Somos 2G SERVICIOS GENERALES S.R.L, una empresa peruana con sede en Cajamarca y dedicada a la ejecución de proyectos de construcción e ingeniería con más de diez años de experiencia en: levantamientos topográficos, movimiento de tierras, saneamiento físico legal de predios, construcción y mantenimiento en interiores y exteriores de edificaciones, trabajos de arco eléctrico y oxicorte, alquiler de maquinaria liviana para construcción y minería, sistemas de rebombeo de aguas superficiales."
     />
     <title>2G | Servicios Generales</title>
   </head>
