Add script for Google Rich Results

--- a/public/index.html
+++ b/public/index.html
@@ -1,17 +1,68 @@
 <!DOCTYPE html>
 <html lang="es">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Somos 2G SERVICIOS GENERALES S.R.L, una empresa peruana con sede en Cajamarca y dedicada a la ejecución de proyectos de construcción e ingeniería con más de diez años de experiencia en: levantamientos topográficos, movimiento de tierras, saneamiento físico legal de predios, construcción y mantenimiento en interiores y exteriores de edificaciones, trabajos de arco eléctrico y oxicorte, alquiler de maquinaria liviana para construcción y minería, sistemas de rebombeo de aguas superficiales."
-    />
-    <title>2G | Servicios Generales</title>
-  </head>
-  <body>
-    <div id="root"></div>
-  </body>
+    <head>
+        <meta charset="utf-8" />
+        <link rel="icon" href="%PUBLIC_URL%/logo.ico" />
+        <meta name="viewport" content="width=device-width, initial-scale=1" />
+        <meta name="theme-color" content="#000000" />
+        <meta
+        name="description"
+        content="Somos 2G SERVICIOS GENERALES S.R.L, una empresa peruana con sede en Cajamarca y dedicada a la ejecución de proyectos de construcción e ingeniería con más de diez años de experiencia en: levantamientos topográficos, movimiento de tierras, saneamiento físico legal de predios, construcción y mantenimiento en interiores y exteriores de edificaciones, trabajos de arco eléctrico y oxicorte, alquiler de maquinaria liviana para construcción y minería, sistemas de rebombeo de aguas superficiales."
+        />
+        <title>2G | Servicios Generales</title>
+        <script type="application/ld+json">
+            {
+            "@context": "https://schema.org/",
+            "@type": ["ProfessionalService", "GeneralContractor"],
+            "name": "2G Servicios Generales S.R.L",
+            "address": {
+                "@type": "PostalAddress",
+                "postalCode": "06002",
+                "streetAddress": "Jr. San Sebastián 557",
+                "addressCountry": "PE",
+                "addressRegion": "Cajamarca",
+                "addressLocality": "Cajamarca",
+                "telephone": "+51 966 869 663"
+            },
+            "image": [
+                "https://2gserviciosgenerales.com/static/media/remodelacion-hotel-costa-del-sol.8c282a3ca5588acab75e.webp",
+                "https://2gserviciosgenerales.com/static/media/saneamiento-fisico-legal-predios.c15e4f2fb888aed173c0.webp",
+                "https://2gserviciosgenerales.com/static/media/sistemas-drenaje.8d49daeb8fdea01acf3d.webp",
+                "https://2gserviciosgenerales.com/static/media/evaluacion-sistemas-bombeo.f6a330bf00cbca18d0bf.webp",
+                "https://2gserviciosgenerales.com/static/media/movimiento-tierras.3d8fee1b9c3f368ad6e6.webp",
+                "https://2gserviciosgenerales.com/static/media/levantamiento-topografico.1b5ae571f8ccc2bae909.webp",
+                "https://2gserviciosgenerales.com/static/media/construccion-civil.2651aea756fdec1d59c4.webp"
+            ],
+            "aggregateRating": {
+                "@type": "AggregateRating",
+                "ratingValue": "4.7",
+                "ratingCount": "8",
+                "reviewCount": "7"
+            },
+            "geo": {
+                "@type": "GeoCoordinates",
+                "latitude": "-7.165263552329575",
+                "longitude": "-78.51647668479347"
+            },
+            "openingHoursSpecification": {
+                "@type": "OpeningHoursSpecification",
+                "opens": "08:00",
+                "closes": "18:00",
+                "dayOfWeek": [
+                "Monday",
+                "Tuesday",
+                "Wednesday",
+                "Thursday",
+                "Friday",
+                "Saturday"
+                ]
+            },
+            "telephone": "+51 966 869 663",
+            "url": "https://2gserviciosgenerales.com/"
+            }
+        </script>
+    </head>
+    <body>
+        <div id="root"></div>
+    </body>
 </html>
