Update script for Google Rich Results
Bussiness type updated to HomeAndConstructionBussiness instead of
ProfessionalService

--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
         <script type="application/ld+json">
             {
             "@context": "https://schema.org/",
-            "@type": ["ProfessionalService", "GeneralContractor"],
+            "@type": ["HomeAndConstructionBusiness", "GeneralContractor"],
             "name": "2G Servicios Generales S.R.L",
             "address": {
                 "@type": "PostalAddress",
